Fix broken style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   color: #141823;
   background-color: #DFEADC;
   margin: 0;
@@ -426,13 +427,14 @@ footer {
 }
 
 
-* {
+p {
   font-family: "Noto Sans JP";
   line-height: 1.7;
   letter-spacing: 0.05em;
 }
 
 h1 {
+  font-family: "Noto Sans JP";
   font-size: 2rem;
   font-weight: var(--font-weight-normal);
   line-height: 1.75;
@@ -440,6 +442,7 @@ h1 {
 }
 
 h2 {
+  font-family: "Noto Sans JP";
   font-size: 1.65rem;
   font-weight: var(--font-weight-normal);
   line-height: 1.5;
@@ -447,6 +450,7 @@ h2 {
 }
 
 h3 {
+  font-family: "Noto Sans JP";
   font-size: 1.5rem;
   font-weight: var(--font-weight-normal);
   line-height: 1.5;
@@ -454,6 +458,7 @@ h3 {
 }
 
 h4 {
+  font-family: "Noto Sans JP";
   font-size: 1.25rem;
   line-height: 1.5;
   letter-spacing: -0.02em;
